# cognito

./: .env.example  .gitignore  CLAUDE.md  ISSUES.md  ISSUES_PLAN.md  README.md  TASKS.md  coding-agent-prompts.md  docker-compose.yml  implementation_plan.md.resolved  issues.md  new-cognito-spec.md  rebuild-containers.sh  thought-journal-pwa-spec.md
backend/: .dockerignore  .env.docker.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  database.py  logging.py  main.py  models_registry.py
backend/app/auth/: dependencies.py  jwt.py  oauth.py
backend/app/models/: __init__.py  chat.py  config.py  entry.py  goal.py  knowledge.py  notifications.py  proposal.py  schedule.py  user.py
backend/app/repositories/: entry_repo.py  goal_repo.py  user_repo.py
backend/app/routers/: auth.py  briefing.py  chat.py  config.py  entries.py  goals.py  ingest.py  (+10 more)
backend/tests/: __init__.py  conftest.py  test_agent.py  test_auth.py  test_briefing.py  test_chat.py  test_config.py  test_database.py  test_entries.py  test_entry_versions.py  test_extractor.py  test_goals.py  test_ingest.py  test_jwt.py  test_knowledge_adapters.py  test_knowledge_api.py  test_knowledge_linkparse.py  test_knowledge_materializer.py  test_knowledge_retriever.py  test_knowledge_schema.py  test_knowledge_search.py  test_labels.py  test_llm.py  test_notifications.py  test_nudge_engine.py  test_project_management.py  test_proposals.py  test_revisions.py  test_schedule.py  test_sync.py  test_tasks.py  test_timestamp.py  test_user_repo.py  test_vikunja.py
(+289 files in other folders)
